// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Horizontal bar component Renders horizontal bar component 1`] = `
<HorizontalBar
  isUniColor={true}
  layoutConfig={
    Object {
      "colorway": Array [
        "#8C55A3",
      ],
      "height": 220,
      "margin": Object {
        "b": 15,
        "l": 60,
        "pad": 0,
        "r": 10,
        "t": 30,
      },
      "showlegend": true,
    }
  }
  name="Event counts"
  visualizations={
    Object {
      "data": Object {
        "count()": Array [
          2549,
          9337,
          1173,
        ],
        "span(timestamp,1M)": Array [
          "2021-05-01 00:00:00",
          "2021-06-01 00:00:00",
          "2021-07-01 00:00:00",
        ],
      },
      "jsonData": Array [
        Object {
          "count()": 2549,
          "span(timestamp,1M)": "2021-05-01 00:00:00",
        },
        Object {
          "count()": 9337,
          "span(timestamp,1M)": "2021-06-01 00:00:00",
        },
        Object {
          "count()": 2549,
          "span(timestamp,1M)": "2021-07-01 00:00:00",
        },
      ],
      "metadata": Object {
        "fields": Array [
          Object {
            "name": "count()",
            "type": "integer",
          },
          Object {
            "name": "span(timestamp,1M)",
            "type": "timestamp",
          },
        ],
      },
    }
  }
>
  <Bar
    barConfig={
      Object {
        "orientation": "h",
      }
    }
    layoutConfig={
      Object {
        "colorway": Array [
          "#8C55A3",
        ],
        "height": 220,
        "margin": Object {
          "b": 15,
          "l": 60,
          "pad": 0,
          "r": 10,
          "t": 30,
        },
        "showlegend": true,
        "yaxis": Object {
          "automargin": true,
        },
      }
    }
    visualizations={
      Object {
        "data": Object {
          "count()": Array [
            2549,
            9337,
            1173,
          ],
          "span(timestamp,1M)": Array [
            "2021-05-01 00:00:00",
            "2021-06-01 00:00:00",
            "2021-07-01 00:00:00",
          ],
        },
        "jsonData": Array [
          Object {
            "count()": 2549,
            "span(timestamp,1M)": "2021-05-01 00:00:00",
          },
          Object {
            "count()": 9337,
            "span(timestamp,1M)": "2021-06-01 00:00:00",
          },
          Object {
            "count()": 2549,
            "span(timestamp,1M)": "2021-07-01 00:00:00",
          },
        ],
        "metadata": Object {
          "fields": Array [
            Object {
              "name": "count()",
              "type": "integer",
            },
            Object {
              "name": "span(timestamp,1M)",
              "type": "timestamp",
            },
          ],
        },
      }
    }
  >
    <Plt
      config={
        Object {
          "orientation": "h",
        }
      }
      data={
        Array [
          Object {
            "marker": Object {
              "color": Array [
                "#3CA1C7",
                "#8C55A3",
                "#DB748A",
              ],
            },
            "name": "count()",
            "orientation": "h",
            "type": "bar",
            "x": Array [
              2549,
              9337,
              1173,
            ],
            "y": Array [
              "2021-05-01 00:00:00",
              "2021-06-01 00:00:00",
              "2021-07-01 00:00:00",
            ],
          },
        ]
      }
      layout={
        Object {
          "colorway": Array [
            "#8C55A3",
          ],
          "height": 220,
          "margin": Object {
            "b": 15,
            "l": 60,
            "pad": 0,
            "r": 10,
            "t": 30,
          },
          "showlegend": true,
          "xaxis": Object {
            "automargin": true,
          },
          "yaxis": Object {
            "automargin": true,
          },
        }
      }
    >
      <PlotlyComponent
        config={
          Object {
            "displayModeBar": false,
            "orientation": "h",
          }
        }
        data={
          Array [
            Object {
              "marker": Object {
                "color": Array [
                  "#3CA1C7",
                  "#8C55A3",
                  "#DB748A",
                ],
              },
              "name": "count()",
              "orientation": "h",
              "type": "bar",
              "x": Array [
                2549,
                9337,
                1173,
              ],
              "y": Array [
                "2021-05-01 00:00:00",
                "2021-06-01 00:00:00",
                "2021-07-01 00:00:00",
              ],
            },
          ]
        }
        debug={false}
        layout={
          Object {
            "autosize": true,
            "barmode": "stack",
            "colorway": Array [
              "#8C55A3",
            ],
            "height": 220,
            "hovermode": "closest",
            "legend": Object {
              "orientation": "h",
              "traceorder": "normal",
            },
            "margin": Object {
              "b": 15,
              "l": 60,
              "pad": 0,
              "r": 10,
              "t": 30,
            },
            "showlegend": true,
            "xaxis": Object {
              "automargin": true,
            },
            "yaxis": Object {
              "automargin": true,
            },
          }
        }
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
        useResizeHandler={true}
      >
        <div
          style={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </PlotlyComponent>
    </Plt>
  </Bar>
</HorizontalBar>
`;

exports[`Horizontal bar component Renders horizontal bar component 2`] = `
<HorizontalBar
  isUniColor={true}
  layoutConfig={
    Object {
      "colorway": Array [
        "#8C55A3",
      ],
      "height": 220,
      "margin": Object {
        "b": 15,
        "l": 60,
        "pad": 0,
        "r": 10,
        "t": 30,
      },
      "showlegend": true,
    }
  }
  name="Event counts"
  visualizations={
    Object {
      "data": Object {
        "count()": Array [
          2549,
          9337,
          1173,
        ],
        "span(timestamp,1M)": Array [
          "2021-05-01 00:00:00",
          "2021-06-01 00:00:00",
          "2021-07-01 00:00:00",
        ],
      },
      "jsonData": Array [
        Object {
          "count()": 2549,
          "span(timestamp,1M)": "2021-05-01 00:00:00",
        },
        Object {
          "count()": 9337,
          "span(timestamp,1M)": "2021-06-01 00:00:00",
        },
        Object {
          "count()": 2549,
          "span(timestamp,1M)": "2021-07-01 00:00:00",
        },
      ],
      "metadata": Object {
        "fields": Array [
          Object {
            "name": "count()",
            "type": "integer",
          },
          Object {
            "name": "span(timestamp,1M)",
            "type": "timestamp",
          },
        ],
      },
    }
  }
>
  <Bar
    barConfig={
      Object {
        "orientation": "h",
      }
    }
    layoutConfig={
      Object {
        "colorway": Array [
          "#8C55A3",
        ],
        "height": 220,
        "margin": Object {
          "b": 15,
          "l": 60,
          "pad": 0,
          "r": 10,
          "t": 30,
        },
        "showlegend": true,
        "yaxis": Object {
          "automargin": true,
        },
      }
    }
    visualizations={
      Object {
        "data": Object {
          "count()": Array [
            2549,
            9337,
            1173,
          ],
          "span(timestamp,1M)": Array [
            "2021-05-01 00:00:00",
            "2021-06-01 00:00:00",
            "2021-07-01 00:00:00",
          ],
        },
        "jsonData": Array [
          Object {
            "count()": 2549,
            "span(timestamp,1M)": "2021-05-01 00:00:00",
          },
          Object {
            "count()": 9337,
            "span(timestamp,1M)": "2021-06-01 00:00:00",
          },
          Object {
            "count()": 2549,
            "span(timestamp,1M)": "2021-07-01 00:00:00",
          },
        ],
        "metadata": Object {
          "fields": Array [
            Object {
              "name": "count()",
              "type": "integer",
            },
            Object {
              "name": "span(timestamp,1M)",
              "type": "timestamp",
            },
          ],
        },
      }
    }
  >
    <Plt
      config={
        Object {
          "orientation": "h",
        }
      }
      data={
        Array [
          Object {
            "marker": Object {
              "color": Array [
                "#3CA1C7",
                "#8C55A3",
                "#DB748A",
              ],
            },
            "name": "count()",
            "orientation": "h",
            "type": "bar",
            "x": Array [
              2549,
              9337,
              1173,
            ],
            "y": Array [
              "2021-05-01 00:00:00",
              "2021-06-01 00:00:00",
              "2021-07-01 00:00:00",
            ],
          },
        ]
      }
      layout={
        Object {
          "colorway": Array [
            "#8C55A3",
          ],
          "height": 220,
          "margin": Object {
            "b": 15,
            "l": 60,
            "pad": 0,
            "r": 10,
            "t": 30,
          },
          "showlegend": true,
          "xaxis": Object {
            "automargin": true,
            "autorange": true,
            "range": Array [
              0,
              9828.421052631578,
            ],
            "type": "linear",
          },
          "yaxis": Object {
            "automargin": true,
            "autorange": true,
            "range": Array [
              "2021-04-16",
              "2021-07-16",
            ],
            "type": "date",
          },
        }
      }
    >
      <PlotlyComponent
        config={
          Object {
            "displayModeBar": false,
            "orientation": "h",
          }
        }
        data={
          Array [
            Object {
              "marker": Object {
                "color": Array [
                  "#3CA1C7",
                  "#8C55A3",
                  "#DB748A",
                ],
              },
              "name": "count()",
              "orientation": "h",
              "type": "bar",
              "x": Array [
                2549,
                9337,
                1173,
              ],
              "y": Array [
                "2021-05-01 00:00:00",
                "2021-06-01 00:00:00",
                "2021-07-01 00:00:00",
              ],
            },
          ]
        }
        debug={false}
        layout={
          Object {
            "autosize": true,
            "barmode": "stack",
            "colorway": Array [
              "#8C55A3",
            ],
            "height": 220,
            "hovermode": "closest",
            "legend": Object {
              "orientation": "h",
              "traceorder": "normal",
            },
            "margin": Object {
              "b": 15,
              "l": 60,
              "pad": 0,
              "r": 10,
              "t": 30,
            },
            "showlegend": true,
            "xaxis": Object {
              "automargin": true,
              "autorange": true,
              "range": Array [
                0,
                9828.421052631578,
              ],
              "type": "linear",
            },
            "yaxis": Object {
              "automargin": true,
              "autorange": true,
              "range": Array [
                "2021-04-16",
                "2021-07-16",
              ],
              "type": "date",
            },
          }
        }
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
        useResizeHandler={true}
      >
        <div
          style={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </PlotlyComponent>
    </Plt>
  </Bar>
</HorizontalBar>
`;
